# lie_tutorial

./: .gitmodules  CMakeLists.txt  derivation_of_quaternion.cpp  lie_theory.cpp
